[package]
name = "oauth2-get"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive", "env"] }
form_urlencoded = "1.0.1"
hyper = { version = "0.14.17", features = ["server"] }
oauth2 = { version = "4.1.0", features = ["reqwest"] }
opener = "0.5.0"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
